--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,9 @@
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "react": "^17.0.2",
+    "sass": "^1.66.0",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "typescript-plugin-css-modules": "^5.0.1"
   }
 }
