--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "postinstall": "git config core.hooksPath ./git-hooks",
     "test": "turbo run test",
     "test:watch": "turbo run test:watch"
   },
