--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "tsconfig/react-library.json",
   "compilerOptions": {
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
   },
-  "include": ["src"],
+  "include": ["src", "tests"],
   "exclude": ["dist", "build", "node_modules"]
 }
