--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "d3": "^7.8.5",
     "next": "^13.4.1",
     "react": "^18.2.0",
